--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,7 +108,7 @@ header{
     background-size: 66px;
     background-repeat: no-repeat;
     background-position-x: 6px;
-    background-position-y: 0px;
+    background-position-y: -1px;
 }
 .st{
     margin-left: 11px;
@@ -223,12 +223,14 @@ header{
     margin-bottom: 12px;
 }
 .bottom{
-    display: flex;
-    flex-wrap: wrap;
+    position: relative;
     height: 75px;
+    width: 100%;
 }
-.icon-bot{
-    margin-right: 76.5%;
+.tag{
+    position: absolute;
+    right: 3%;
+    top: 0;
 }
 .icon-bot ion-icon{
     margin-left: 10px;
@@ -256,12 +258,13 @@ header{
     border-radius: 3px;
 }
 .curtidas{
+    position: absolute;
+    bottom: 20px;
+    left: 12px;
     display: flex;
     align-items: center;
     font-weight: 300;
     font-size: 14px;
-    margin-bottom: 14px;
-    margin-left: 17px;
 }
 .curtidas img{
     margin-right: 5px;
@@ -274,6 +277,11 @@ ion-icon{
 }
 .bottom-bar{
         display: none;
+}
+a{
+    font-style: none;
+    text-decoration: none;
+    color: inherit;
 }
 @media (max-width: 934px) {
     .sidebar {
@@ -345,13 +353,6 @@ ion-icon{
     .none{
         display: none;
     }
-    .icon-bot{
-        margin-right: 77,697vw;
-    }
-    .total{
-        margin: 0;
-        height: auto;
-    }
     .pagina{
         height: 100%;
     }
@@ -375,23 +376,14 @@ ion-icon{
         width: 100vw;
     }
     .tag{
-        display: flex;
         position: absolute;
-        left: 100%;
-    }
-    .bottom ion-icon{
-        left: 0;
-    }
-    .icon-bot{
-        margin-right: 65vw;
-        top: 0;
+        right: 3%;
     }
     .icon-bot ion-icon{
         margin-left: 10px;
     }
     .img{
         height: auto;
-        width: 100vw;
     }
     .primeiro-post{
         height: auto;
@@ -404,14 +396,8 @@ ion-icon{
     }
     .img img{
         height: auto;
-        width: 99.8vw;
-        margin: 0 1px;
-    }
-    .curtidas{
-        margin: 0 0 14px 17px;
-    }
-    .curtidas img{
-        width: 20px;
+        margin: auto;
+        width: calc(100vw - 2px);
     }
     .bottom-bar{
         background-color: #FFFFFF;
